--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,11 @@ body {
 .howcard {
   max-width: 60rem;
 }
-
+.sumbua {
+  left: 90%;
+  width: 100%;
+  font-size: 1rem;
+}
 
 @media (max-width: 600px) {
 
@@ -266,5 +270,13 @@ body {
   position: absolute;
   top: 1rem;
   left: 0;
+  }
+  .sumbua{
+    background-color:slategrey;
+   top: 5%;
+  left: 75%;
+   transform: translate(-100%, 40%);   color: rgb(190, 185, 185);
+    font-size: 0.8rem;
+
   }
 }
