--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -4,18 +4,43 @@
     transition: all 0.5s ease-in-out;
 }
 
+.sidebar-container {
+    width: 100%;
+    height: 100vh;
+    background-color: #d4d4d428;
+    position: fixed;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 100;
+}
+
 .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
     transition: all 0.5s ease-in-out;
     /* min-height: 100%; */
     padding-bottom: 3rem;
-    left: -20rem;
-    z-index: 100;
     height: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 .menu-sel {
     font-size: 1.5rem;
     cursor: pointer;
-    width: 0.5rem;
+    width: 0.7rem;
+}
+.menu-sel i {
+    cursor: pointer;
+}
+
+.stt-up {
+    width: 20rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 26, 58, 0.377) !important;
 }
 
 
@@ -23,6 +48,29 @@
     .home-search {
         position: absolute;
         left: 70%;
+    }
+
+    .sidebar-container {
+        width: 100%;
+        height: 100vh;
+        background-color: #d4d4d428;
+        position: fixed;
+        top: 0;
+        left: 0;
+        position: fixed;
+        z-index: 100;
+    }
+    
+    .sidebar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        transition: all 0.5s ease-in-out;
+        /* min-height: 100%; */
+        padding-bottom: 3rem;
+        height: 100vh;
+        padding: 1rem;
+        padding-bottom: 2rem;
     }
 }
 
@@ -33,27 +81,47 @@
         padding-bottom: 3rem;
         display: flex;
         flex-direction: column !important;
-        padding: 3rem;
+        padding: 0.5rem;
         justify-content: center;
-        
     }
+
+    .top-nav .site-header {
+        display: flex;
+        justify-content: space-between;
+        padding: 0rem 4rem;
+        width: 100%;
+        margin-left: -7.5rem;
+    }
+
+    .top-nav .site-header .app-ttl{
+        left: -10rem;
+    }
+
+    .sidebar-container {
+        width: 100%;
+        height: 100vh;
+        background-color: #d4d4d428;
+        position: fixed;
+        top: 0;
+        left: 0;
+        position: fixed;
+        z-index: 100;
+    }
+
     .sidebar {
-        left: -15rem;
         width: 15rem;
         transition: all 0.5s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
+
     .app-title {
         width: 1rem;
         height: 4rem;
         justify-content: center !important;
     }
-    .menu-sel {
-        font-size: 1.5rem;
-        position: absolute;
-        top: 50%;
-        left: 0%;
-        cursor: pointer;
-    }
+
     .dash-content {
         display: flex; 
         flex-direction: column !important;
@@ -77,7 +145,7 @@
     }
 
     .stt-up {
-        width: 50% !important;
+        width: 9rem !important;
     }
 
     .dash-graphs {
