--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -5,14 +5,28 @@
     height: 100vh;
     background-color: #000;
 
+    .error-alert {
+        position: absolute;
+        top: 75%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 20rem;
+
+        .fail-error {
+            color: #ff0000;
+            padding: 1rem;
+            border-radius: 5px;
+            width: 100%;
+        }
+    }
+
     .container {
-        background-color: #267b8c22;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 40rem;
         padding: 1rem;
         border-radius: 10px;
+        position: relative;
 
         h1 {
             color: #fff;
@@ -27,13 +41,15 @@
 
             label {
                 display: flex;
-                align-items: center;
-                gap: 1rem;
+                flex-direction: column;
+                align-items: flex-start;
+
                 width: 100%;
     
                 input {
                     padding: 0.5rem;
                     outline: none;
+                    width: 100%;
                     border: none;
                     background-color: #fff;
                     flex: 1;
@@ -60,6 +76,81 @@
 
         h5 {
             color: #008000;
+        }
+    }
+}
+
+@media only screen and (min-width: 768px){
+    .Login {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: #000;
+    
+        .error-alert {
+            position: absolute;
+            top: 70%;
+        }
+    
+        .container {
+            background-color: #267b8c22;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 40rem;
+            padding: 1rem;
+            border-radius: 10px;
+            position: relative;
+    
+            h1 {
+                color: #fff;
+                text-align: center;
+            }
+    
+            form {
+                display: flex;
+                flex-direction: column;
+                padding: 1rem;
+                align-items: center;
+    
+                label {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 1rem;
+                    width: 100%;
+        
+                    input {
+                        padding: 0.5rem;
+                        outline: none;
+                        border: none;
+                        background-color: #fff;
+                        flex: 1;
+                        color: #000;
+                        border-radius: 5px;
+                    }
+                }
+    
+                button {
+                    padding: 0.5rem 2rem;
+                    background-color: #fff;
+                    border: none;
+                    color: #008000;
+                    width: 100%;
+                    border-radius: 5px;
+                    margin-top: 1rem;
+    
+                    &:hover {
+                        background-color: #008000;
+                        color: #fff;
+                    }
+                }
+            }
+    
+            h5 {
+                color: #008000;
+            }
         }
     }
 }
