--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -72,6 +72,9 @@
         padding: 1rem;
         padding-bottom: 2rem;
     }
+    .dash-graphs {
+        margin: 1rem;
+    }
 }
 
 @media (max-width: 600px) {
@@ -90,11 +93,14 @@
         justify-content: space-between;
         padding: 0rem 4rem;
         width: 100%;
-        margin-left: -7.5rem;
+        margin-left: -30%;
     }
 
     .top-nav .site-header .app-ttl{
-        left: -10rem;
+        position: absolute;
+        left: 50%;
+        top: -5%;
+        transform: translateX(-50%);
     }
 
     .sidebar-container {
@@ -153,5 +159,6 @@
         flex-direction: column !important;
         width: 100%;
         height: 100%;
+        min-width: 100%;
     }
 }
