--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,3 +1,7 @@
+.success-al {
+    width: 100% !important;
+}
+
 .Login {
     display: flex;
     align-items: center;
@@ -18,6 +22,12 @@
             border-radius: 5px;
             width: 100%;
         }
+    }
+    
+
+    .demo-alert {
+        position: absolute;
+        top: 10%
     }
 
     .container {
@@ -91,6 +101,10 @@
         .error-alert {
             position: absolute;
             top: 70%;
+        }
+        .demo-alert {
+            position: absolute;
+            top: 10%
         }
     
         .container {
