Here come more css changes

--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #000;
-    height: 100vh;
+    height: 100%;
 
     .header {
         text-align: center;
