--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -91,6 +91,10 @@
 }
 
 @media only screen and (min-width: 768px){
+    .success-al {
+        width: 25% !important;
+    }
+    
     .Login {
         display: flex;
         align-items: center;
