--- a/src/components/Upload/Upload.scss
+++ b/src/components/Upload/Upload.scss
@@ -2,14 +2,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #000;
-    height: 100vh;
+    background-color: #21252967;
 
     .header {
         text-align: center;
         padding: 2rem;
         background-color: #267B8C;
         width: 100%;
+
+        p {
+            font-size: 0.9rem;
+        }
+
     }
 
     .upload-body {
@@ -20,6 +24,15 @@
         padding: 1rem 0.5rem;
         margin-top: 2rem;
         width: 60%;
+        height: auto;
+
+        h3 {
+            font-size: 1.2rem;
+        }
+
+        h5 {
+            font-size: 0.9rem;
+        }
 
         .upload-button {
             display: flex;
@@ -46,7 +59,33 @@
             width: 50%;
             margin-top: 2rem;
         }
-        
+
+        .kuja {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            width: 100%;
+
+            a {
+                border: 2px solid #2bb1cf;
+                padding: 0.5rem 1rem;
+                border-radius: 10px;
+
+                &:hover {
+                    background-color: #2bb1cf;
+                    color: #fff;
+                }
+            }
+        }
+
+        .processing {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+        }
+
         .row {
 
             input {
